Fixed content wrap on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -141,7 +141,7 @@ body {
 // SMALL SCREENS
 // =================================================
 @media screen and (max-width: 800px) {
-	.content {
+	.content .content-main {
 		flex-wrap: wrap;
 	}
 }
